--- a/endnote.bib
+++ b/endnote.bib
@@ -19,7 +19,6 @@
    DOI = {10.1037/a0029792},
    url = {http://www.ncbi.nlm.nih.gov/pubmed/22963229},
    year = {2012},
-   type = {Journal Article}
 }
 
 @article{Liu_2020_JOPD,
@@ -32,7 +31,6 @@
    DOI = {10.5334/jopd.49/},
    url = {http://doi.org/10.5334/jopd.49},
    year = {2020},
-   type = {Journal Article}
 }
 
 
@@ -81,8 +79,7 @@
    url = {https://www.jstatsoft.org/v088/i02
 http://dx.doi.org/10.18637/jss.v088.i02},
    year = {2019},
-   type = {Journal Article}
-}
+ }
 
 @article{Hu_2018_JASP,
    author = {Hu, Chuan-Peng and Kong, Xiang-Zhen and Wagenmakers, Eric-Jan and Ly, Alexander and Peng, Kaiping},
@@ -94,7 +91,6 @@ http://dx.doi.org/10.18637/jss.v088.i02},
    DOI = {10.3724/SP.J.1042.2018.00951},
    url = {http://www.chinaxiv.org/abs/201709.00120},
    year = {2018},
-   type = {Journal Article}
 }
 
 @article{Wagenmakers_2018_JASP,
@@ -109,7 +105,6 @@ http://dx.doi.org/10.18637/jss.v088.i02},
    DOI = {10.3758/s13423-017-1323-7},
    url = {https://link.springer.com/article/10.3758%2Fs13423-017-1323-7},
    year = {2018},
-   type = {Journal Article}
 }
 
 @article{Bakeman_2015_eff_size,
@@ -136,7 +131,6 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    DOI = {10.3389/fpsyg.2013.00863},
    url = {http://journal.frontiersin.org/Journal/10.3389/fpsyg.2013.00863/full},
    year = {2013},
-   type = {Journal Article}
 }
 
 @book{Jeffreys_1961,
@@ -177,7 +171,6 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    DOI = {10.1525/collabra.301},
    url = {https://www.collabra.org/articles/10.1525/collabra.301/},
    year = {2020},
-   type = {Journal Article}
 }
 
 @article{Goh_2016_mini,
@@ -191,7 +184,6 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    DOI = {10.1111/spc3.12267},
    url = {http://dx.doi.org/10.1111/spc3.12267},
    year = {2016},
-   type = {Journal Article}
 }
 
 @book{Cooper_2009_handbook,
@@ -214,7 +206,6 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    pages = {433-436},
    ISSN = {0169-1015},
    year = {1997},
-   type = {Journal Article}
 }
 
 @article{Pelli_1997,
@@ -226,7 +217,6 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    pages = {437-442},
    ISSN = {0169-1015},
    year = {1997},
-   type = {Journal Article}
 }
 
 @article{Stanislaw_Todorov_1999,
@@ -241,7 +231,6 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    url = {https://doi.org/10.3758/BF03207704
 https://link.springer.com/content/pdf/10.3758/BF03207704.pdf},
    year = {1999},
-   type = {Journal Article}
 }
 
 @article{DeCarlo_1998,
@@ -254,7 +243,6 @@ https://link.springer.com/content/pdf/10.3758/BF03207704.pdf},
    ISSN = {1939-1463(Electronic),1082-989X(Print)},
    DOI = {10.1037/1082-989X.3.2.186},
    year = {1998},
-   type = {Journal Article}
 }
 
 @article{Rouder_2005_BHM_SDT,
@@ -293,14 +281,17 @@ http://dx.doi.org/10.18637/jss.v080.i01},
    type = {Journal Article}
 }
 
-@article{Rousselet_2019,
-   author = {Rousselet, Guillaume A and Wilcox, Rand R},
-   title = {Reaction times and other skewed distributions: problems with the mean and the median},
-   journal = {Meta-Psychology},
-   DOI = {10.1101/383935},
-   url = {https://www.biorxiv.org/content/10.1101/383935v3},
-   year = {2019},
-   type = {preprint}
+
+@article{rousselet_reaction_2020,
+	title = {Reaction times and other skewed distributions: problems with the mean and the median},
+	volume = {4},
+	url = {https://open.lnu.se/index.php/metapsychology/article/view/1630},
+	doi = {10.15626/MP.2019.1630},
+	journal = {Meta-Psychology},
+	author = {Rousselet, Guillaume A and Wilcox, Rand R},
+	month = may,
+	year = {2020},
+	keywords = {skewness},
 }
 
 @article{Krueger_1978,
@@ -336,7 +327,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
    DOI = {10.1371/journal.pone.0186606},
    year = {2017},
    pages = {e0186606},
-   type = {Journal Article}
 }
 
 @article{van_zandt_comparison_2000,
@@ -1667,7 +1657,7 @@ Publisher: American Psychological Association},
 }
 
 
-@article{anderson_value-driven_2011,
+@article{anderson_value_2011,
 	title = {Value-driven attentional capture},
 	volume = {108},
 	issn = {0027-8424, 1091-6490},
@@ -1740,7 +1730,6 @@ Publisher: American Psychological Association},
 @aticle{pool_attentional_2016,
 	title = {Attentional bias for positive emotional stimuli: A meta-analytic investigation},
 	volume = {142},
-	issn = {1939-1455(Electronic),0033-2909(Print)},
 	doi = {10.1037/bul0000026},
 	shorttitle = {Attentional bias for positive emotional stimuli},
 	pages = {79--106},
@@ -1748,8 +1737,6 @@ Publisher: American Psychological Association},
 	journaltitle = {Psychological Bulletin},
 	author = {Pool, Eva and Brosch, Tobias and Delplanque, Sylvain and Sander, David},
 	date = {2016},
-	note = {Place: {US}
-Publisher: American Psychological Association},
 	keywords = {Attentional Bias, Emotions, Rewards}
 }
 
@@ -1915,7 +1902,6 @@ Publisher: Nature Publishing Group},
 	pages = {4747},
 }
 
-
 @article{forstmann_ann_rev_2016,
 	title = {Sequential {Sampling} {Models} in {Cognitive} {Neuroscience}: {Advantages}, {Applications}, and {Extensions}},
 	volume = {67},
@@ -2046,7 +2032,6 @@ Publisher: Nature Publishing Group},
 	editor = {Johansen, Joshua and Büchel, Christian and Korn, Christoph W},
 	month = nov,
 	year = {2022},
-	note = {Publisher: eLife Sciences Publications, Ltd},
 	keywords = {fMRI, conditioning, pain, instructions, expectancy, reversal learning},
 	pages = {e73353},
 }
@@ -2063,4 +2048,88 @@ Publisher: Nature Publishing Group},
 Publisher: Cambridge University Press},
 	keywords = {generalizability, experiments, (in)commensurability, cumulative knowledge},
 	pages = {1--55},
+}
+
+
+@article{Ma_JEPHPP_2010,
+	title = {Why we respond faster to the self than to others? {An} implicit positive association theory of self-advantage during implicit face recognition},
+	volume = {36},
+	issn = {1939-1277},
+	shorttitle = {Why we respond faster to the self than to others?},
+	doi = {10.1037/a0015797},
+	journal = {Journal of Experimental Psychology: Human Perception and Performance},
+	author = {Ma, Yina and Han, Shihui},
+	year = {2010},
+	note = {Place: US
+Publisher: American Psychological Association},
+	keywords = {Self-Perception, Face Perception, Positivism},
+	pages = {619--633},
+}
+
+
+@article{carlson_nat_comm_2020,
+	title = {Motivated misremembering of selfish decisions},
+	volume = {11},
+	copyright = {2020 The Author(s)},
+	issn = {2041-1723},
+	url = {https://www.nature.com/articles/s41467-020-15602-4},
+	doi = {10.1038/s41467-020-15602-4},
+	language = {en},
+	number = {1},
+	urldate = {2020-07-21},
+	journal = {Nature Communications},
+	author = {Carlson, Ryan W. and Maréchal, Michel André and Oud, Bastiaan and Fehr, Ernst and Crockett, Molly J.},
+	month = apr,
+	year = {2020},
+	pages = {2100},
+}
+
+@article{stanley_remembering_2019,
+	title = {Remembering moral and immoral actions in constructing the self},
+	volume = {47},
+	issn = {1532-5946},
+	url = {https://doi.org/10.3758/s13421-018-0880-y},
+	doi = {10.3758/s13421-018-0880-y},
+	language = {en},
+	number = {3},
+	urldate = {2020-07-26},
+	journal = {Memory \& Cognition},
+	author = {Stanley, Matthew L. and Henne, Paul and De Brigard, Felipe},
+	month = apr,
+	year = {2019},
+	pages = {441--454},
+}
+
+
+@article{sui_electrophysiological_2023,
+	title = {Electrophysiological correlates of self-prioritization},
+	volume = {108},
+	issn = {1053-8100},
+	url = {https://www.sciencedirect.com/science/article/pii/S1053810023000120},
+	doi = {10.1016/j.concog.2023.103475},
+	language = {en},
+	urldate = {2023-02-01},
+	journal = {Consciousness and Cognition},
+	author = {Sui, Jie and He, Xun and Golubickis, Marius and Svensson, Saga L. and Neil Macrae, C.},
+	month = feb,
+	year = {2023},
+	keywords = {EEG, Self, Drift diffusion model, Decision-making, Self-prioritization, Shape-label matching task, N1, 3},
+	pages = {103475},
+}
+
+
+@article{yankouskaya_relationship_2022,
+	title = {The relationship between self, value-based reward and emotion prioritisation effects},
+	issn = {1747-0218},
+	shorttitle = {{EXPRESS}},
+	url = {https://doi.org/10.1177/17470218221102887},
+	doi = {10.1177/17470218221102887},
+	language = {en},
+	urldate = {2022-05-21},
+	journal = {Quarterly Journal of Experimental Psychology},
+	author = {Yankouskaya, Alla and Lovett, Gemma and Sui, Jie},
+	month = may,
+	year = {2022},
+	note = {Publisher: SAGE Publications},
+	keywords = {emotion prioritisation, self-prioritisation, value-based reward prioritisation},
 }
